[Tickets] Prevent long ticket titles from overflowing the page (#960)
Only really a concern if the ticket has no spaces in it, which is a rare occurrence.

--- a/app/javascript/src/styles/common/tables.scss
+++ b/app/javascript/src/styles/common/tables.scss
@@ -18,6 +18,7 @@ table.striped {
 
         &.full-width-link {
           padding: 0;
+          word-break: break-word;
 
           > a {
             width: 100%;
